Fix date chooser button text overflow

--- a/frontend/less/calendar.less
+++ b/frontend/less/calendar.less
@@ -361,4 +361,5 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
+    white-space: inherit;
 }
